feat(frontend): implement official deep navy responsive design, dynamic navbar, and polished ui components